--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,48 @@
             font-family: 'Josefin Sans', sans-serif;
         }
 
+        html, body {
+          height: 100%;
+        }
+
+        .postButtons{
+          display: flex;
+          justify-content:space-around;
+          margin-top: 20px;
+        }
+
+        .sampleOne, .sampleTwo{
+          margin: auto 0;
+          text-align: center;
+        }
+
+        .audioTitle{
+          margin: 20px;
+        }
+
+        .audioClass{
+          background: #D0E4F5;
+          width: 100%;
+          height:100vh;
+          display: flex;
+          flex-direction: row;
+          justify-content:space-around;
+        }
+
+        button {
+          background-color: #0B6FA4;
+          border: none;
+          color: white;
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+        }
+
         .navbar {
             font-size: 18px;
-            background-color: red;
+            background: #0B6FA4;
             border: 1px solid rgba(0, 0, 0, 0.2);
             padding-bottom: 10px;
         }
@@ -50,6 +89,12 @@
             display: block;
         }
 
+        @media screen and (max-width:600px){
+          .audioClass{
+            flex-direction: column;
+          }
+        }
+
         @media screen and (min-width: 768px) {
             .navbar {
                 display: flex;
@@ -86,4 +131,43 @@
             .nav-links:hover {
                 color: rgba(255, 255, 255, 1);
             }
+        }
+
+        #myTable{
+          display: flex;
+          justify-content: center;
+        }
+
+        table.paleBlueRows {
+          font-family: "Times New Roman", Times, serif;
+          border: 1px solid #FFFFFF;
+          width:90%;
+          height: 90%;
+          text-align: center;
+          border-collapse: collapse;
+          margin: 10px;
+        }
+        table.paleBlueRows td, table.paleBlueRows th {
+          border: 1px solid #FFFFFF;
+          padding: 3px 2px;
+        }
+        table.paleBlueRows tbody td {
+          font-size: 13px;
+        }
+        table.paleBlueRows tr:nth-child(even) {
+          background: #D0E4F5;
+        }
+        table.paleBlueRows thead {
+          background: #0B6FA4;
+          border-bottom: 5px solid #FFFFFF;
+        }
+        table.paleBlueRows thead th {
+          font-size: 17px;
+          font-weight: bold;
+          color: #FFFFFF;
+          text-align: center;
+          border-left: 2px solid #FFFFFF;
+        }
+        table.paleBlueRows thead th:first-child {
+          border-left: none;
         }
